--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         }
 
         .services h2 {
-            color: #2c5f7c;
+            color: #096789;
             margin-bottom: 2rem;
             text-align: center;
             font-size: 2rem;
@@ -142,7 +142,7 @@
         }
 
         .service-item h3 {
-            color: #2c5f7c;
+            color: #096789;
             margin-bottom: 1rem;
             font-size: 1.3rem;
             font-weight: 600;
@@ -170,7 +170,7 @@
         }
 
         .about-content h2 {
-            color: #2c5f7c;
+            color: #096789;
             margin-bottom: 2rem;
             font-size: 2rem;
             font-weight: 600;
@@ -184,7 +184,7 @@
         }
 
         .contact-info {
-            background: #2c5f7c;
+            background: #096789;
             color: white;
             padding: 3rem 2rem;
             border-radius: 12px;
@@ -286,7 +286,7 @@
 				  <text xml:space="preserve" text-anchor="start" font-family="'Bitter', serif" font-size="60" stroke-width="0" id="svg_4" y="332.00037" x="175.00004" stroke="#000" fill="#ffffff">Analytics, LLC</text>
 				 </g>
 				</svg>
-                <div class="logo-text">Drumlin Analytics LLC</div>
+                <div class="logo-text">Drumlin Analytics</div>
             </div>
             <ul class="nav-links">
                 <li><a href="#" onclick="showPage('home')" class="active">Home</a></li>
@@ -300,24 +300,36 @@
         <div id="home" class="page active">
             <section class="hero">
                 <h1>Scientific & Environmental Consulting</h1>
-                <p>Data-driven solutions for aquatic environments and spatial analysis</p>
+                <p>Data-driven solutions for complex environmental issues</p>
             </section>
 
             <section class="services">
                 <h2>Our Services</h2>
                 <div class="service-grid">
                     <div class="service-item">
-                        <h3>Spatial Analysis & GIS</h3>
-                        <p>Geographic information systems, spatial modeling, and cartographic solutions for environmental projects.</p>
+                        <h3>GIS and Spatial Analysis</h3>
+                        <p>Advanced mapping, cartography, geospatial modeling, and LiDAR data processing</p>
                     </div>
                     <div class="service-item">
-                        <h3>Data Analysis & Machine Learning</h3>
-                        <p>Statistical analysis, predictive modeling, and automated data processing for environmental datasets.</p>
+                        <h3>Environmental Data Analysis</h3>
+                        <p>Statistical modeling, machine learning, and big data processing using R and Python</p>
                     </div>
                     <div class="service-item">
                         <h3>Aquatic Habitat Assessment</h3>
-                        <p>Stream and wetland evaluation, habitat mapping, and aquatic ecosystem monitoring and analysis.</p>
+                        <p>Habitat analysis, wetland studies, and restoration planning</p>
                     </div>
+                    <div class="service-item">
+                        <h3>Climate and Hydrological Modeling</h3>
+                        <p>Stream temperature prediction and climate impact analysis</p>
+                    </div>
+                    <div class="service-item">
+                        <h3>Field Surveys and Monitoring</h3>
+                        <p>GPS surveying, instrumentation, and biological assessments</p>
+                    </div>
+                    <div class="service-item">
+                        <h3>Custom Software Development</h3>
+                        <p>Web applications, automated processing tools, and interactive data visualization platforms</p>
+                    </div>                   
                 </div>
             </section>
         </div>
@@ -325,10 +337,10 @@
         <!-- About Page -->
         <div id="about" class="page">
             <section class="about-content">
-                <h2>About Drumlin Analytics LLC</h2>
+                <h2>About Drumlin Analytics</h2>
                 <p>Drumlin Analytics LLC provides scientific and environmental consulting with a focus on aquatic ecosystems and spatial data analysis. We combine expertise in environmental science with advanced analytical techniques to deliver data-driven solutions for complex environmental challenges.</p>
                 
-                <p>Our team specializes in GIS applications, statistical modeling, and aquatic habitat assessment. We work with agencies, consultants, and researchers to transform environmental data into actionable insights that support informed decision-making.</p>
+                <p>We specialize in GIS applications, statistical modeling, salmon ecology, and aquatic habitat assessment. We work with agencies, consultants, and researchers to transform environmental data into actionable insights that support informed decision-making.</p>
             </section>
 
             <section class="contact-info">
