--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             line-height: 1.6;
             color: #333;
             background-color: #ffffff;
@@ -92,15 +92,13 @@
 
         .hero h1 {
             font-size: 2.5rem;
-            margin-bottom: 1rem;
-            color: #2c5f7c;
+            color: #096789;
             font-weight: 700;
         }
 
         .hero p {
             font-size: 1.2rem;
             color: #666;
-            margin-bottom: 2rem;
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
@@ -286,7 +284,7 @@
 				  <text xml:space="preserve" text-anchor="start" font-family="'Bitter', serif" font-size="60" stroke-width="0" id="svg_4" y="332.00037" x="175.00004" stroke="#000" fill="#ffffff">Analytics, LLC</text>
 				 </g>
 				</svg>
-                <div class="logo-text">Drumlin Analytics</div>
+                <div class="logo-text">Scientific & Environmental Consulting</div>
             </div>
             <ul class="nav-links">
                 <li><a href="#" onclick="showPage('home')" class="active">Home</a></li>
@@ -298,13 +296,11 @@
     <main class="container">
         <!-- Home Page -->
         <div id="home" class="page active">
-            <section class="hero">
-                <h1>Scientific & Environmental Consulting</h1>
+            <!-- <section class="hero">
                 <p>Data-driven solutions for complex environmental issues</p>
-            </section>
-
+            </section> -->
             <section class="services">
-                <h2>Our Services</h2>
+                <h2>Services</h2>
                 <div class="service-grid">
                     <div class="service-item">
                         <h3>GIS and Spatial Analysis</h3>
