update About text

--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
         }
 
         .contact-info {
-            background: #096789;
+            background: #307695;
             color: white;
-            padding: 3rem 2rem;
+            padding: 1rem 1rem;
             border-radius: 12px;
             text-align: center;
         }
@@ -334,14 +334,13 @@
         <div id="about" class="page">
             <section class="about-content">
                 <h2>About Drumlin Analytics</h2>
-                <p>Drumlin Analytics LLC provides scientific and environmental consulting with a focus on aquatic ecosystems and spatial data analysis. We combine expertise in environmental science with advanced analytical techniques to deliver data-driven solutions for complex environmental challenges.</p>
+                <p>Drumlin Analytics is based out of Seattle, Washington, a city that rests on the lands and shared waters of Coast Salish people. Over millions of years, glaciers have scraped and molded this region's lands and waterways into distinctive landforms. Drumlin Analytics is named after the area's many <em>drumlins</em>, long, asymmetrical ridges that formed beneath deep ice sheets.</p>
                 
-                <p>We specialize in GIS applications, statistical modeling, salmon ecology, and aquatic habitat assessment. We work with agencies, consultants, and researchers to transform environmental data into actionable insights that support informed decision-making.</p>
+                <p><b>Arianna Goodman</b> is a landscape ecologist and geomorphologist who specializes in aquatic habitats, climate adaptation planning, and advanced geospatial analysis. After leaving NOAA's National Marine Fisheries Service in 2025, she founded Drumlin Analytics LLC as a way to continue developing data-driven solutions for complex environmental challenges. Arianna holds a M.S. in Water Resources Science from Oregon State University and a B.A. in Geology and Biology from Oberlin College.</p>
             </section>
 
             <section class="contact-info">
                 <h3>Get In Touch</h3>
-                <p>Ready to discuss your project needs?</p>
                 <p><strong>Email:</strong> <a href="mailto:info@drumlins.net">info@drumlins.net</a></p>
             </section>
         </div>
