--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <div id="about" class="page">
             <section class="about-content">
                 <h2>About Drumlin Analytics</h2>
-                <p>Drumlin Analytics is based out of Seattle, Washington, a city that rests on the lands and shared waters of Coast Salish people. Over millions of years, glaciers have scraped and molded this region's lands and waterways into distinctive landforms. Drumlin Analytics is named after the area's many <em>drumlins</em>, long, asymmetrical ridges that formed beneath deep ice sheets.</p>
+                <p>Drumlin Analytics is based out of Seattle, Washington, a city that rests on the lands and shared waters of Coast Salish peoples. Over millions of years, glaciers have scraped and molded this region's lands and waterways into distinctive landforms. Drumlin Analytics is named after the area's many <em>drumlins</em>, long, asymmetrical ridges that formed beneath deep ice sheets.</p>
                 
                 <p><b>Arianna Goodman</b> is a landscape ecologist and geomorphologist who specializes in aquatic habitats, climate adaptation planning, and advanced geospatial analysis. After leaving NOAA's National Marine Fisheries Service in 2025, she founded Drumlin Analytics LLC as a way to continue developing data-driven solutions for complex environmental challenges. Arianna holds a M.S. in Water Resources Science from Oregon State University and a B.A. in Geology and Biology from Oberlin College.</p>
             </section>
